[package]
name = "snowflake"
authors = ["Galen Guyer <galen@galenguyer.com>"]
license = "MIT"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "snowflake"
harness = false

[dependencies]
